bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:2: error: not found: value a
  if ((a<0 && b>100)||(a>100 && b<0)){
       ^IcyHot:2: error: not found: value b
  if ((a<0 && b>100)||(a>100 && b<0)){
              ^IcyHot:2: error: not found: value a
  if ((a<0 && b>100)||(a>100 && b<0)){
                       ^IcyHot:2: error: not found: value b
  if ((a<0 && b>100)||(a>100 && b<0)){
                                ^